--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,10 @@ jobs:
       uses: browser-actions/setup-firefox@latest
       with:
         firefox-version: ${{ matrix.firefox }}
-      run: firefox --version
+
+    - name: Show firefox version
+      run: |
+        firefox --version
 
     - name: Set up perl
       uses: shogo82148/actions-setup-perl@v1
