Checking the install-modules syntax for github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       uses: shogo82148/actions-setup-perl@v1
       with:
           perl-version: ${{ matrix.perl }}
-          install-modules: [ 'JSON', 'Archive::Zip', 'Config::INI::Reader', 'Encode', 'File::Temp', 'IPC::Open3', 'JSON', 'Scalar::Util', 'Text::CSV_XS', 'Time::Local', 'Term::ReadKey', 'URI', 'URI::Escape', 'URI::URL' ]
+          install-modules: 'JSON Archive::Zip Config::INI::Reader Encode File::Temp IPC::Open3 JSON Scalar::Util Text::CSV_XS Time::Local Term::ReadKey URI URI::Escape URI::URL'
           install-modules-with: cpanm
           install-modules-args: --with-develop --with-configure
           enable-modules-cache: true
