--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         runner: [ubuntu-latest, macos-latest] #, windows-latest]
         perl: [ '5.32' ]
-        firefox: [ 'latest-beta', 'latest-devedition', 'latest-esr', 'latest' ]
+        firefox: [ 'latest-beta', 'latest-esr', 'latest' ] # 'latest-devedition'
 
     runs-on: ${{matrix.runner}}
     name: OS ${{matrix.runner}} Perl ${{matrix.perl}}
@@ -19,7 +19,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Show available environment varialbes
+    - name: Show available environment variables
       run: |
         set
 
