--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         runner: [ubuntu-latest, macos-latest] #, windows-latest]
         perl: [ '5.32' ]
-        firefox: [ 'latest-beta', 'latest-esr', 'latest' ] # 'latest-devedition'
+        firefox: [ 'latest-beta', 'latest' ] # 'latest-devedition', 'latest-esr',
 
     runs-on: ${{matrix.runner}}
     name: OS ${{matrix.runner}} Perl ${{matrix.perl}}
