Setting AUTOMATED_TESTING for github actions for File::HomeDir on OSX

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,8 @@ jobs:
         perl -v
 
     - name: Install Modules
+      env:
+        AUTOMATED_TESTING: 1
       run: |
         cpanm -v
         cpanm --installdeps .
