Adding fingerprintjs submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "BotD"]
 	path = BotD
 	url = https://github.com/fingerprintjs/BotD.git
+[submodule "fingerprintjs"]
+	path = fingerprintjs
+	url = https://github.com/fingerprintjs/fingerprintjs.git
