--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fingerprintjs"]
 	path = fingerprintjs
 	url = https://github.com/fingerprintjs/fingerprintjs.git
+[submodule "browserfeatcl"]
+	path = browserfeatcl
+	url = https://github.com/lraj22/browserfeatcl.git
