--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runner: [ubuntu-latest, windows-latest] # macos-latest
+        runner: [ubuntu-latest, windows-latest, macos-latest]
         perl: [ '5.32' ]
         firefox: [ 'latest-beta', 'latest' ] # 'latest-devedition', 'latest-esr',
 
